# openpower-proc-control

./: .gitignore  MAINTAINERS  Makefile.am  OWNERS  README.md  argument.cpp  argument.hpp  bmc_boot_steps.cpp  bmc_boot_steps.hpp  boot_control.cpp  boot_control.hpp  boot_control_main.cpp  boot_manager.cpp  boot_manager.hpp  boot_manager_main.cpp  bootstrap.sh  cfam_access.cpp  cfam_access.hpp  configure.ac  create_pel.cpp  create_pel.hpp  directory.cpp  directory.hpp  elog-error.hpp  elog-errors.hpp  ext_interface.cpp  ext_interface.hpp  filedescriptor.cpp  filedescriptor.hpp  gen_makefile.sh  groups  mainapp.cpp  meson.build  meson.options  meson_options.txt  nmi-interface.cpp  nmi-interface.hpp  nmi-main.cpp  nmi.service  nmi.service.in  (+39 more)
boot-control/: Makefile.am  argument.cpp  argument.hpp  bmc_boot_steps.cpp  bmc_boot_steps.cpp.in  bmc_boot_steps.hpp  bmc_boot_steps_p10.cpp  bmc_boot_steps_p10.hpp  bmc_boot_steps_p9.cpp  bmc_boot_steps_p9.hpp  boot_control.cpp  boot_control.hpp  boot_control_main.cpp  boot_steps.json  gen_bmc_boot_steps.sh  pdbg.cpp  pdbg.hpp  pdbg_wrapper.cpp  pdbg_wrapper.hpp  step0@.service.in  step0@service.in  util.cpp  util.hpp
boot-control/p10/: bmc_boot_steps.cpp  bmc_boot_steps.hpp  boot_steps.json  boot_steps_p10.json
boot-control/p9/: bmc_boot_steps.cpp  bmc_boot_steps.hpp  bmc_boot_steps_p9.cpp  boot_steps.json
extensions/phal/: clock_logger.cpp  clock_logger.hpp  clock_logger_main.cpp  common_utils.cpp  common_utils.hpp  create_pel.cpp  create_pel.hpp  devtree_export.cpp  dump_utils.cpp  dump_utils.hpp  fw_update_watch.cpp  fw_update_watch.hpp  journal_log.cpp  journal_log.hpp  pdbg_utils.cpp  pdbg_utils.hpp  phal_env.cpp  phal_env.hpp  phal_error.cpp  phal_error.hpp
extensions/phal/data/: devtree_export_filter
org/open_power/Proc/: CFAM.errors.yaml  CFAM.metadata.yaml  Cfam.errors.yaml  Cfam.metadata.yaml  FSI.metadata.yaml  SBE.errors.yaml  SBE.metadata.yaml
org/open_power/proc_control/: Device.errors.yaml  Device.metadata.yaml  cfam.errors.yaml
phalerror/: create_pel.cpp  create_pel.hpp  phal_error.cpp  phal_error.hpp
procedures/common/: cfam_overrides.cpp  cfam_reset.cpp  collect_dump.cpp  collect_sbe_hb_data.cpp  enter_mpreboot.cpp  pre_poweroff.cpp  start_host_mpreboot.cpp
procedures/ekb/p10/: start_host.cpp
procedures/ekb/phal-utils/: pdbg.cpp
procedures/ipl/: start_host.cpp
procedures/misc/: cfam_reset.cpp
procedures/openfsi/: scan.cpp
procedures/p9/: cfam_overrides.cpp  cleanup_pcie.cpp  collect_sbe_hb_data.cpp  debug_wd_timeout.cpp  enter_mpipl.cpp  enter_mpreboot.cpp  sbe_debug.cpp  set_sync_fsi_clock_mode.cpp  start_host.cpp  start_host_mpipl.cpp  start_host_mpreboot.cpp  thread_stopall.cpp  vcs_workaround.cpp
procedures/phal/: check_host_running.cpp  common_utils.cpp  common_utils.hpp  enter_mpreboot.cpp  import_devtree.cpp  pre_poweroff.cpp  proc_pre_poweroff.cpp  recover_lid_files  reinit_devtree.cpp  set_SPI_mux.cpp  start_host.cpp  thread_stopall.cpp
service_files/: op-clear-sys-dump-active@.service.in  op-clock-data-logger@.service.in  op-continue-mpreboot@.service.in  op-enter-mpreboot@.service.in  op-reset-host-check@.service.in  op-reset-host-clear.service.in  op-stop-instructions@.service.in  pcie-poweroff@.service.in  phal-create-boottime-guard-indicator.service.in  phal-export-devtree@.service.in  phal-import-devtree@.service.in  phal-reinit-devtree.service.in  proc-pre-poweroff@.service.in  set-spi-mux.service.in  xyz.openbmc_project.Control.Host.NMI.service.in
test/: Makefile.am  utest.cpp
